# MiniCrypto

./: .gitignore  CMakeLists.txt  OPENSSL_WIN.md  README.md  TODO.md  install-dependencies-linux.sh  install-dependencies-win.sh
cmake_helpers/: 3rdparty.cmake  config.cmake  imgui.cmake  openssl.cmake  sdl2-config.cmake
data/: README.md
src/: frequency_analysis.cpp  frequency_analysis.h  global.cpp  global.h  ioutils.cpp  ioutils.h  minicrypto.cpp  minicrypto.h  sdl2.h  types.cpp  types.h  utils.cpp  utils.h
src/events/: events.cpp  events.h
src/networking/: net_query_statistics.cpp  net_query_statistics.h
src/networking/map/: tile_fetcher.cpp  tile_fetcher.h
src/nodes/: context_nodes.cpp  context_nodes.h  data_transform_node.cpp  data_transform_node.h  input_line_node.cpp  input_line_node.h  link.cpp  link.h  node.cpp  node.h  node_type.h  pin.cpp  pin.h  render_node.cpp  render_node.h  text_display_node.cpp  text_display_node.h  text_input_node.cpp  text_input_node.h  types.h
tests/: CMakeLists.txt  core_tests.cpp  exercises_tests.cpp  tests.cpp  tests.h
